# llm-cli

./: .gitignore  README.md  README.zh_CN.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: mkdocs.en.yml  mkdocs.zh_CN.yml
docs/en/: index.md  installation.md
docs/en/configuration/: examples.md  overview.md  reference.md
docs/zh_CN/: index.md  installation.md
docs/zh_CN/configuration/: examples.md  overview.md  reference.md
licenses/: LICENSE-Chatlas
src/: chat.py  config.py  main.py  utils.py
src/llm_cli/: chat.py  main.py
src/llm_cli/utils/: config.py  live_render.py  llm.py
src/llm_ya_cli/: __init__.py  chat.py
src/llm_ya_cli/utils/: llm.py
src/utils/: cli.py  config.py  llm.py
